docs-site/versioned_docs/version-3.5.0/api/enumerations/DriverEnum.md
Defined in: [src/lib/enums/driver.enum.ts:7](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L7)

Enum representing the available pagination driver types

Each driver encapsulates the full format knowledge for both
request building (URI generation) and response parsing.

## Enumeration Members

### DRF

> **DRF**: `"drf"`

Defined in: [src/lib/enums/driver.enum.ts:8](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L8)

***

### JSON\_API

> **JSON\_API**: `"json-api"`

Defined in: [src/lib/enums/driver.enum.ts:9](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L9)

***

### LARAVEL

> **LARAVEL**: `"laravel"`

Defined in: [src/lib/enums/driver.enum.ts:10](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L10)

***

### NESTJS

> **NESTJS**: `"nestjs"`

Defined in: [src/lib/enums/driver.enum.ts:11](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L11)

***

### POSTGREST

> **POSTGREST**: `"postgrest"`

Defined in: [src/lib/enums/driver.enum.ts:12](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L12)

***

### SPATIE

> **SPATIE**: `"spatie"`

Defined in: [src/lib/enums/driver.enum.ts:13](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L13)

***

### STRAPI

> **STRAPI**: `"strapi"`

Defined in: [src/lib/enums/driver.enum.ts:14](https://github.com/AndreaAlhena/ng-qubee/blob/1cd6a1e62b8ad701ae642ec09bab2c3c3e467b57/src/lib/enums/driver.enum.ts#L14)
